--- a/index.html
+++ b/index.html
@@ -3,25 +3,33 @@
 <head>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <title>Prudent Disaster Mitigation</title>
+<style>
+body {
+	background-color: #333333;
+}
+.navbar-logo {
+	max-width: 250px;
+}
+</style>
 </head>
 
 <body>
-<div class= "container">
-<div class= "row">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+<div class= "container-fluid">
+<nav class="navbar navbar-expand-sm navbar-dark">
+  <a class="navbar-brand" href="#"><img src="logo.png" class= "navbar-logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Contact</a>
       </li>
+	  <!--
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
@@ -33,12 +41,15 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+	  -->
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="#">Gallery</a>
       </li>
     </ul>
   </div>
 </nav>
+<div class= "row">
+
 </div>
 
 </div>
