--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@ body {
 <div id="gallery-container" class="pagecontainer hidden-pagecontainer">
 	<div class="row mx-0">
 		<div class="mx-auto">
-			<!--
-				https://app.behold.so/try/
-			-->
+			<div data-behold-id="gmNoj7njtFr9eRjBWd3K"></div>
+				<script>
+				  (() => {
+					const d=document,s=d.createElement("script");s.type="module";
+					s.src="https://w.behold.so/widget.js";d.head.append(s);
+				  })();
+				</script>
+			</div>
 		</div>
 	</div>
 </div>
@@ -100,7 +105,7 @@ var setNavitemActive = function(navitem)
 	navitem.addClass('active');
 	
 	//Hide the mobile menu if open
-	$("#navbarSupportedContent").collapse('hide');
+	//$("#navbarSupportedContent").collapse('hide');
 }
 
 //Function to show the correct page container
