--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 	background-color: #222222;
 }
 .navbar-logo {
-	max-width: 175px;
+	max-height: 40px;
 }
 .navtext-align {
 	align-items: end;
@@ -26,7 +26,7 @@ body {
 <body>
 <div class= "container-fluid px-0">
 <nav class="navbar navbar-expand-sm navbar-dark navtext-align navbar-background-color">
-  <a class="navbar-brand" href="#"><img src="logo.png" class= "navbar-logo"></a>
+  <a class="navbar-brand" href="#"><img src="navlogo.png" class= "navbar-logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
