It didn't fully commit last time but I already pushed it

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
 </div>
 
 <div id="gallery-container" class="pagecontainer hidden-pagecontainer">
-	<div class="row mx-0">
+	<div class="row mx-0 mt-3">
 		<div data-behold-id="gmNoj7njtFr9eRjBWd3K"></div>
 		<script>
 		  (() => {
