commneted out the gallery page

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ body {
         </div>
       </li>
 	  -->
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="#" id="gallery-navitem">Gallery</a>
-      </li>
+      </li>-->
     </ul>
   </div>
 </nav>
@@ -84,13 +84,13 @@ body {
 
 <div id="gallery-container" class="pagecontainer hidden-pagecontainer">
 	<div class="row mx-0 mt-3">
-		<div data-behold-id="gmNoj7njtFr9eRjBWd3K"></div>
+		<!--<div data-behold-id="gmNoj7njtFr9eRjBWd3K"></div>
 		<script>
 		  (() => {
 			const d=document,s=d.createElement("script");s.type="module";
 			s.src="https://w.behold.so/widget.js";d.head.append(s);
 		  })();
-		</script>
+		</script>--> 
 	</div>
 </div>
 
