Made the Call to Action Banner

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@ body {
 .hidden-pagecontainer {
 	display: none;
 }
+.call-to-action {
+	background-color: #999999;
+	text-align: center;
+	min-height: 100px;
+	padding-top: 20px;
+}
 </style>
 </head>
 
@@ -46,19 +52,6 @@ body {
       <li class="nav-item">
         <a class="nav-link" href="#" id="contact-navitem">Contact</a>
       </li>
-	  <!--
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-	  -->
       <!--<li class="nav-item">
         <a class="nav-link" href="#" id="gallery-navitem">Gallery</a>
       </li>-->
@@ -68,8 +61,8 @@ body {
 
 <div id="home-container" class="pagecontainer">
 	<div class= "row mx-0">
-		<div class= "col-sm-10 col-lg-8 mx-auto">
-			<img src="whitelogo.png" style="max-width:100%">
+		<div class= "col-sm-12 col-lg-12 mx-auto call-to-action">
+			<h1 class= "mx-auto my-auto">Call to Action ____</h1>
 		</div>
 	</div>
 </div>
