--- a/index.html
+++ b/index.html
@@ -65,6 +65,33 @@ body {
 			<h1 class= "mx-auto my-auto">Call to Action ____</h1>
 		</div>
 	</div>
+	<div class= "row mx-0 mt-3">
+			<h3 class= "mx-auto my-auto"><u>Our Services/Process</u></h3>
+	</div>
+	<div class= "row mx-0 mt-3">
+		<div class= "col-4"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+		<div class= "col-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
+		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
+		volutpat elit sit primis dapibus phasellus.</div>
+	</div>
+	<div class= "row mx-0 mt-3">
+		<div class= "col-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
+		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
+		volutpat elit sit primis dapibus phasellus.</div>
+		<div class= "col-4"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+	</div>
+	<div class= "row mx-0 mt-3">
+		<div class= "col-4"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+		<div class= "col-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
+		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
+		volutpat elit sit primis dapibus phasellus.</div>
+	</div>
+	<div class= "row mx-0 mt-3">
+		<div class= "col-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
+		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
+		volutpat elit sit primis dapibus phasellus.</div>
+		<div class= "col-4"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+	</div
 </div>
 
 <div id="contact-container" class="pagecontainer hidden-pagecontainer">
