--- a/index.html
+++ b/index.html
@@ -76,21 +76,23 @@ body {
 	</div>
 	<div class= "row mx-0 mt-3">
 		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
-		<div class= "col-12 col-md-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
-		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
-		volutpat elit sit primis dapibus phasellus.</div>
+		<div class= "col-12 col-md-8 pt-3"> Step 2: Lorem ipsum odor amet, consectetuer adipiscing elit. 
+		Dis maecenas metus imperdiet adipiscing et. Venenatis tristique efficitur proin viverra nibh finibus
+		non tortor. Hendrerit mus vestibulum lobortis suscipit porttitor; erat molestie gravida. Pulvinar 
+		a dui pellentesque ultrices porttitor et tincidunt.</div>
 	</div>
 	<div class= "row mx-0 mt-3">
 		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
-		<div class= "col-12 col-md-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
-		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
-		volutpat elit sit primis dapibus phasellus.</div>
+		<div class= "col-12 col-md-8 pt-3"> Step 3: Lorem ipsum odor amet, consectetuer adipiscing elit.
+		Magnis fringilla non vel adipiscing ridiculus. Torquent integer tellus aliquam nullam donec tempus 
+		aliquam suspendisse. Ac phasellus non potenti vestibulum dapibus aliquam nunc ex.</div>
 	</div>
 	<div class= "row mx-0 mt-3">
 		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
-		<div class= "col-12 col-md-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
-		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
-		volutpat elit sit primis dapibus phasellus.</div>
+		<div class= "col-12 col-md-8 pt-3"> Step 4: Lorem ipsum odor amet, consectetuer adipiscing elit.
+		Class malesuada sodales faucibus torquent; interdum suspendisse. Taciti enim elementum fusce vehicula 
+		ultrices cursus nec. Lacus nascetur malesuada, placerat dictum tincidunt risus fusce. Vehicula fusce 
+		himenaeos neque gravida duis.</div>
 	</div
 </div>
 
