Added before and after placeholder bootstrap cards to homepage

--- a/index.html
+++ b/index.html
@@ -93,7 +93,27 @@ body {
 		Class malesuada sodales faucibus torquent; interdum suspendisse. Taciti enim elementum fusce vehicula 
 		ultrices cursus nec. Lacus nascetur malesuada, placerat dictum tincidunt risus fusce. Vehicula fusce 
 		himenaeos neque gravida duis.</div>
-	</div
+	</div>
+	<div class= "row mx-0 mt-3" style="border-top: 2px solid; border-color: black;">
+		<div class="col-12 col-md-6" style="text-align: center; border-right: 2px solid; border-right-color: black;">
+			<h4><u>Before</u></h4>
+			<div class="card" style="width: 100%;">
+				<img class="card-img-top" src="WhiteHouseLogo.png" alt="Before image of ruined house">
+				<div class="card-body">
+					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 col-md-6" style="text-align: center;">
+			<h4><u>After</u></h4>
+			<div class="card" style="width: 100%;">
+				<img class="card-img-top" src="WhiteHouseLogo.png" alt="After image of restored house">
+				<div class="card-body">
+					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div id="contact-container" class="pagecontainer hidden-pagecontainer">
