Git rid of extra photo

--- a/index.html
+++ b/index.html
@@ -69,26 +69,26 @@ body {
 			<h3 class= "mx-auto my-auto"><u>Our Services/Process</u></h3>
 	</div>
 	<div class= "row mx-0 mt-3">
-		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
 		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
 		volutpat elit sit primis dapibus phasellus.</div>
 	</div>
 	<div class= "row mx-0 mt-3">
-		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 2: Lorem ipsum odor amet, consectetuer adipiscing elit. 
 		Dis maecenas metus imperdiet adipiscing et. Venenatis tristique efficitur proin viverra nibh finibus
 		non tortor. Hendrerit mus vestibulum lobortis suscipit porttitor; erat molestie gravida. Pulvinar 
 		a dui pellentesque ultrices porttitor et tincidunt.</div>
 	</div>
 	<div class= "row mx-0 mt-3">
-		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 3: Lorem ipsum odor amet, consectetuer adipiscing elit.
 		Magnis fringilla non vel adipiscing ridiculus. Torquent integer tellus aliquam nullam donec tempus 
 		aliquam suspendisse. Ac phasellus non potenti vestibulum dapibus aliquam nunc ex.</div>
 	</div>
 	<div class= "row mx-0 mt-3">
-		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="WhiteHouseLogo.png"/></div>
+		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 4: Lorem ipsum odor amet, consectetuer adipiscing elit.
 		Class malesuada sodales faucibus torquent; interdum suspendisse. Taciti enim elementum fusce vehicula 
 		ultrices cursus nec. Lacus nascetur malesuada, placerat dictum tincidunt risus fusce. Vehicula fusce 
@@ -98,7 +98,7 @@ body {
 		<div class="col-12 col-md-6" style="text-align: center; border-right: 2px solid; border-right-color: black;">
 			<h4><u>Before</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="WhiteHouseLogo.png" alt="Before image of ruined house">
+				<img class="card-img-top" src="logo.png" alt="Before image of ruined house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
@@ -107,11 +107,24 @@ body {
 		<div class="col-12 col-md-6" style="text-align: center;">
 			<h4><u>After</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="WhiteHouseLogo.png" alt="After image of restored house">
+				<img class="card-img-top" src="logo.png" alt="After image of restored house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class= "row mx-0 mt-5">
+		<div class= "col-sm-12 col-lg-12 mx-auto call-to-action" style="min-height: 0px;">
+			<h2 class= "mx-auto my-auto">Mission Statement</h2>
+		</div>
+		<div class="col-12 mx-auto call-to-action" style="padding-top:0px; min-height: 0px;">
+			Here is a few sentences to see
+		</div>
+	</div>
+	<div class= "row mx-0 mt-5">
+		<div class="col-8">
+			<img src="" style="max-width: 100%" />
 		</div>
 	</div>
 </div>
