--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body {
 		<div class="col-12 col-md-6" style="text-align: center; border-right: 2px solid; border-right-color: black;">
 			<h4><u>Before</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="logo.png" alt="Before image of ruined house">
+				<img class="card-img-top" src="blacklogo.png" alt="Before image of ruined house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
@@ -107,24 +107,24 @@ body {
 		<div class="col-12 col-md-6" style="text-align: center;">
 			<h4><u>After</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="logo.png" alt="After image of restored house">
+				<img class="card-img-top" src="blacklogo.png" alt="After image of restored house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class= "row mx-0 mt-5">
+	<div class= "row mx-0 mt-3">
 		<div class= "col-sm-12 col-lg-12 mx-auto call-to-action" style="min-height: 0px;">
 			<h2 class= "mx-auto my-auto">Mission Statement</h2>
 		</div>
-		<div class="col-12 mx-auto call-to-action" style="padding-top:0px; min-height: 0px;">
+		<div class="col-12 pb-3 mx-auto call-to-action" style="padding-top:0px; min-height: 0px;">
 			Here is a few sentences to see
 		</div>
 	</div>
-	<div class= "row mx-0 mt-5">
-		<div class="col-8">
-			<img src="" style="max-width: 100%" />
+	<div class= "row mx-0 pt-3 pb-3" style="background-color: black;">
+		<div class="col-8 mx-auto">
+			<img src="whitelogo.png" style="max-width: 100%" />
 		</div>
 	</div>
 </div>
