--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ body {
 	min-height: 100px;
 	padding-top: 20px;
 }
+.service-row {
+	color: white;
+}
 </style>
 </head>
 
@@ -65,29 +68,29 @@ body {
 			<h1 class= "mx-auto my-auto">Call to Action ____</h1>
 		</div>
 	</div>
-	<div class= "row mx-0 mt-3">
+	<div class= "row mx-0 mt-3 service-row">
 			<h3 class= "mx-auto my-auto"><u>Our Services/Process</u></h3>
 	</div>
-	<div class= "row mx-0 mt-3">
+	<div class= "row mx-0 mt-3 service-row">
 		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
 		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
 		volutpat elit sit primis dapibus phasellus.</div>
 	</div>
-	<div class= "row mx-0 mt-3">
+	<div class= "row mx-0 mt-3 service-row">
 		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 2: Lorem ipsum odor amet, consectetuer adipiscing elit. 
 		Dis maecenas metus imperdiet adipiscing et. Venenatis tristique efficitur proin viverra nibh finibus
 		non tortor. Hendrerit mus vestibulum lobortis suscipit porttitor; erat molestie gravida. Pulvinar 
 		a dui pellentesque ultrices porttitor et tincidunt.</div>
 	</div>
-	<div class= "row mx-0 mt-3">
+	<div class= "row mx-0 mt-3 service-row">
 		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 3: Lorem ipsum odor amet, consectetuer adipiscing elit.
 		Magnis fringilla non vel adipiscing ridiculus. Torquent integer tellus aliquam nullam donec tempus 
 		aliquam suspendisse. Ac phasellus non potenti vestibulum dapibus aliquam nunc ex.</div>
 	</div>
-	<div class= "row mx-0 mt-3">
+	<div class= "row mx-0 mt-3 service-row">
 		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3"> Step 4: Lorem ipsum odor amet, consectetuer adipiscing elit.
 		Class malesuada sodales faucibus torquent; interdum suspendisse. Taciti enim elementum fusce vehicula 
