added photos and some changes

--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@ body {
 .service-row {
 	color: white;
 }
+.before-and-after-text {
+	color: white;
+}
 </style>
 </head>
 
 <body>
 <div class= "container-fluid px-0">
-<nav class="navbar navbar-expand-sm navbar-dark navtext-align navbar-background-color">
+<nav class="navbar navbar-expand-sm navbar-dark navtext-align navbar-background-color sticky-top">
   <a class="navbar-brand" href="#"><img src="navlogo.png" class= "navbar-logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -99,18 +102,18 @@ body {
 	</div>
 	<div class= "row mx-0 mt-3" style="border-top: 2px solid; border-color: black;">
 		<div class="col-12 col-md-6" style="text-align: center; border-right: 2px solid; border-right-color: black;">
-			<h4><u>Before</u></h4>
+			<h4 class= "before-and-after-text"><u>Before</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="blacklogo.png" alt="Before image of ruined house">
+				<img class="card-img-top" src="cabinets2.jpg" alt="Before image of ruined house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6" style="text-align: center;">
-			<h4><u>After</u></h4>
+			<h4 class= "before-and-after-text"><u>After</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="blacklogo.png" alt="After image of restored house">
+				<img class="card-img-top" src="cabinets4.jpg" alt="After image of restored house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
