Fixed capitalization of new images

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body {
 		<div class="col-12 col-md-6" style="text-align: center; border-right: 2px solid; border-right-color: black;">
 			<h4 class= "before-and-after-text"><u>Before</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="cabinets2.jpg" alt="Before image of ruined house">
+				<img class="card-img-top" src="cabinets2.JPG" alt="Before image of ruined house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
@@ -113,7 +113,7 @@ body {
 		<div class="col-12 col-md-6" style="text-align: center;">
 			<h4 class= "before-and-after-text"><u>After</u></h4>
 			<div class="card" style="width: 100%;">
-				<img class="card-img-top" src="cabinets4.jpg" alt="After image of restored house">
+				<img class="card-img-top" src="cabinets4.JPG" alt="After image of restored house">
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
