Changed meta tag theme-color to match navbar color
This is for iOS status bar to match the color of the top element of the
website, similar to IRS.gov and other major sites. It was set to white,
but we want it to match the nav bar color, so I set it to #222222

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#dd071d">
 <meta name="msapplication-TileColor" content="#dd071d">
-<meta name="theme-color" content="#ffffff"><title>Prudent Disaster Mitigation</title>
+<meta name="theme-color" content="#222222"><title>Prudent Disaster Mitigation</title>
 <style>
 body {
 	background-color: #333333;
