--- a/index.html
+++ b/index.html
@@ -32,12 +32,22 @@ body {
 	text-align: center;
 	min-height: 100px;
 	padding-top: 20px;
+	padding-bottom: 20px;
 }
 .service-row {
 	color: white;
+	background-color: #444444;
+	border-radius: 25px;
+	padding: 10px;
+}
+.service-row img {
+	border-radius: 25px;
 }
 .before-and-after-text {
 	color: white;
+}
+.big-text {
+	font-size: 1.5em;
 }
 </style>
 </head>
@@ -65,58 +75,54 @@ body {
   </div>
 </nav>
 
-<div id="home-container" class="pagecontainer">
-	<div class= "row mx-0">
+<div id="home-container" class="pagecontainer container-fluid">
+	<div class= "row">
 		<div class= "col-sm-12 col-lg-12 mx-auto call-to-action">
-			<h1 class= "mx-auto my-auto">Call to Action ____</h1>
+			<h1 class= "mx-auto my-auto">One Call Does It All <img style="height: 0.9em;" src="telephone-fill.svg"></h1><h1 class= "mx-auto my-auto">804-220-0812</h1>
 		</div>
 	</div>
 	<div class= "row mx-0 mt-3 service-row">
-			<h3 class= "mx-auto my-auto"><u>Our Services/Process</u></h3>
+			<h3 class= "mx-auto my-auto"><u>Over 55 Years of Experience</u></h3>
 	</div>
 	<div class= "row mx-0 mt-3 service-row">
-		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="logo.png"/></div>
-		<div class= "col-12 col-md-8 pt-3"> Step 1: Lorem ipsum odor amet, consectetuer adipiscing elit. Purus
-		tellus venenatis blandit erat venenatis class non posuere tellus. Placerat in hac pharetra
-		volutpat elit sit primis dapibus phasellus.</div>
+		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="carpentry_stock.jpg"/></div>
+		<div class= "col-12 col-md-8 my-auto big-text">Master carpenter and IICRC Certified Technician on staff to protect your home</div>
 	</div>
 	<div class= "row mx-0 mt-3 service-row">
-		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="logo.png"/></div>
-		<div class= "col-12 col-md-8 pt-3"> Step 2: Lorem ipsum odor amet, consectetuer adipiscing elit. 
-		Dis maecenas metus imperdiet adipiscing et. Venenatis tristique efficitur proin viverra nibh finibus
-		non tortor. Hendrerit mus vestibulum lobortis suscipit porttitor; erat molestie gravida. Pulvinar 
-		a dui pellentesque ultrices porttitor et tincidunt.</div>
+		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="insurance_stock.jpg"/></div>
+		<div class= "col-12 col-md-8 my-auto big-text">We will work with all insurance companies for you</div>
 	</div>
 	<div class= "row mx-0 mt-3 service-row">
-		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="logo.png"/></div>
-		<div class= "col-12 col-md-8 pt-3"> Step 3: Lorem ipsum odor amet, consectetuer adipiscing elit.
-		Magnis fringilla non vel adipiscing ridiculus. Torquent integer tellus aliquam nullam donec tempus 
-		aliquam suspendisse. Ac phasellus non potenti vestibulum dapibus aliquam nunc ex.</div>
+		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="williamsburg_stock.jpg"/></div>
+		<div class= "col-12 col-md-8 my-auto big-text">Servicing Williamsburg and surrounding area</div>
 	</div>
+	<!--
 	<div class= "row mx-0 mt-3 service-row">
 		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="logo.png"/></div>
-		<div class= "col-12 col-md-8 pt-3"> Step 4: Lorem ipsum odor amet, consectetuer adipiscing elit.
-		Class malesuada sodales faucibus torquent; interdum suspendisse. Taciti enim elementum fusce vehicula 
-		ultrices cursus nec. Lacus nascetur malesuada, placerat dictum tincidunt risus fusce. Vehicula fusce 
-		himenaeos neque gravida duis.</div>
+		<div class= "col-12 col-md-8 pt-3">Test text here</div>
 	</div>
+	-->
 	<div class= "row mx-0 mt-3" style="border-top: 2px solid; border-color: black;">
 		<div class="col-12 col-md-6" style="text-align: center; border-right: 2px solid; border-right-color: black;">
 			<h4 class= "before-and-after-text"><u>Before</u></h4>
 			<div class="card" style="width: 100%;">
 				<img class="card-img-top" src="cabinets2.JPG" alt="Before image of ruined house">
+				<!--
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
+				-->
 			</div>
 		</div>
 		<div class="col-12 col-md-6" style="text-align: center;">
 			<h4 class= "before-and-after-text"><u>After</u></h4>
 			<div class="card" style="width: 100%;">
 				<img class="card-img-top" src="cabinets4.JPG" alt="After image of restored house">
+				<!--
 				<div class="card-body">
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				</div>
+				-->
 			</div>
 		</div>
 	</div>
