Finishing touches to the mission statement

--- a/index.html
+++ b/index.html
@@ -128,11 +128,13 @@ body {
 	</div>
 	<div class= "row mx-0 mt-3">
 		<div class= "col-sm-12 col-lg-12 mx-auto call-to-action" style="min-height: 0px;">
-			<h2 class= "mx-auto my-auto">Mission Statement</h2>
+			<h2 class= "mx-auto my-auto">Class A Contractor</h2>
 		</div>
+		<!--
 		<div class="col-12 pb-3 mx-auto call-to-action" style="padding-top:0px; min-height: 0px;">
 			Here is a few sentences to see
 		</div>
+		-->
 	</div>
 	<div class= "row mx-0 pt-3 pb-3" style="background-color: black;">
 		<div class="col-8 mx-auto">
