Switched to 3 image layout in the .service-row

--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@ body {
 .service-row {
 	color: white;
 	background-color: #444444;
-	border-radius: 25px;
+	border-radius: 5px;
 	padding: 10px;
 }
 .service-row img {
-	border-radius: 25px;
+	border-radius: 5px;
 }
 .before-and-after-text {
 	color: white;
 }
 .big-text {
 	font-size: 1.5em;
+}
+.slideshow-img {
+	width: 25%;
 }
 </style>
 </head>
@@ -81,27 +84,51 @@ body {
 			<h1 class= "mx-auto my-auto">One Call Does It All <img style="height: 0.9em;" src="telephone-fill.svg"></h1><h1 class= "mx-auto my-auto">804-220-0812</h1>
 		</div>
 	</div>
+	<!--
 	<div class= "row mx-0 mt-3 service-row">
 			<h3 class= "mx-auto my-auto"><u>Over 55 Years of Experience</u></h3>
 	</div>
+	-->
 	<div class= "row mx-0 mt-3 service-row">
-		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="carpentry_stock.jpg"/></div>
-		<div class= "col-12 col-md-8 my-auto big-text">Master carpenter and IICRC Certified Technician on staff to protect your home</div>
+		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="whitelogo.png"/></div>
+		<div class= "col-12 col-md-8 my-auto big-text">
+			<h2>Over 55 Years of Experience</h2>
+			<ul>
+				<li>Master carpenter and IICRC Certified Technician on staff to protect your home</li>
+				<li>We will work with all insurance companies to fix water damage in your home (and more!)</li>
+				<li>Providing the following services to Williamsburg and the surrounding area:</li>
+			</ul>
+		</div>
 	</div>
 	<div class= "row mx-0 mt-3 service-row">
-		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="insurance_stock.jpg"/></div>
-		<div class= "col-12 col-md-8 my-auto big-text">We will work with all insurance companies for you</div>
+		<div class="col-12">
+		<h1 class="text-center">
+			Our Services
+		</h1>
+		<h5 class="text-center mb-3">
+			Water damage comes in every shape and size
+		</h5>
+		</div>
+		<div class= "col-12 col-md-4 my-auto">
+			<img src="cabinets2.JPG" style="max-width:100%;"/>
+		</div>
+		<div class= "col-12 col-md-4 my-auto">
+			<img src="water_damage.jpg" style="max-width:100%;" />
+		</div>
+		<div class= "col-12 col-md-4 my-auto">
+			<img src="floor_damage.jpg" style="max-width:100%;" />
+		</div>
 	</div>
 	<div class= "row mx-0 mt-3 service-row">
 		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="williamsburg_stock.jpg"/></div>
 		<div class= "col-12 col-md-8 my-auto big-text">Servicing Williamsburg and surrounding area</div>
 	</div>
-	<!--
+	
 	<div class= "row mx-0 mt-3 service-row">
 		<div class= "col-12 col-md-4 order-md-2"><img style="max-width: 100%" src="logo.png"/></div>
 		<div class= "col-12 col-md-8 pt-3">Test text here</div>
 	</div>
-	-->
+	
 	<div class= "row mx-0 mt-3" style="border-top: 2px solid; border-color: black;">
 		<div class="col-12 col-md-6" style="text-align: center; border-right: 2px solid; border-right-color: black;">
 			<h4 class= "before-and-after-text"><u>Before</u></h4>
