Added last line of text next to last image

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
 	</div>
 	
 	<div class= "row mx-0 mt-3 service-row">
-		<div class= "col-12 col-md-8 my-auto"><h5>Test text here</h5></div>
+		<div class= "col-12 col-md-8 my-auto"><h5>Then we use fans and dehumidifiers to dry out and save the remaining material</h5></div>
 		<div class= "col-12 col-md-4"><img style="max-width: 100%" src="fans_and_dehus.jpg"/></div>
 	</div>
 	
