--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ body {
 	margin-top:-10px; 
 	margin-right: 5px;
 }
-.call-to-action a {
+.contact-link {
 	color: #444444;
 	text-decoration: underline;
 }
-.call-to-action a:hover {
+.contact-link:hover {
 	color: #555555;
 }
 </style>
@@ -93,7 +93,7 @@ body {
 <div id="home-container" class="pagecontainer container-fluid">
 	<div class= "row">
 		<div class= "col-sm-12 col-lg-12 mx-auto call-to-action">
-			<h1 class= "mx-auto my-auto">Call us, or use our <a href="#" id="contact-link">contact form</a> </h1><h1 class= "mx-auto my-auto"><img src="telephone-fill.svg">804-220-0812</h1>
+			<h1 class= "mx-auto my-auto">Call us, or use our <a href="#" class="contact-link">contact form</a> </h1><h1 class= "mx-auto my-auto"><img src="telephone-fill.svg">804-220-0812</h1>
 		</div>
 	</div>
 	<!--
@@ -167,7 +167,11 @@ body {
 	</div>
 	<div class= "row mx-0 mt-3">
 		<div class= "col-sm-12 col-lg-12 mx-auto call-to-action" style="min-height: 0px;">
-			<h2 class= "mx-auto my-auto">Class A Contractor</h2>
+			<h2 class= "mx-auto">Who We Are</h2>
+			<h5 class="mx-auto">Class A Contractor's License with RBC Specialty</h5>
+			<h5 class="mx-auto">IICRC Certified Firm in Water Restoration with WRT Certification</h5>
+			<h5 class="mx-auto">Bonded and Insured</h5>
+			<h3 class="mx-auto"><a href="#" class="contact-link">Contact Us</a> Today</h3>
 		</div>
 		<!--
 		<div class="col-12 pb-3 mx-auto call-to-action" style="padding-top:0px; min-height: 0px;">
@@ -273,7 +277,7 @@ document.addEventListener('click', function(event){
 		changePage(event.target);
 	}
 	
-	if(event.target.matches("#contact-link"))
+	if(event.target.matches(".contact-link"))
 	{
 		changeToPage("contact-navitem");
 	}
