Fixed max width on 3 image row

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@ body {
 		</h5>
 		</div>
 		<div class="col-12 col-md-4 my-auto pb-2">
-			<img src="wood_floor.jpg" style="max-width:100%;"/>
+			<img src="wood_floor.jpg" style="width:100%;"/>
 		</div>
 		<div class="col-12 col-md-4 my-auto pb-2">
-			<img src="water_damage.jpg" style="max-width:100%;" />
+			<img src="water_damage.jpg" style="width:100%;" />
 		</div>
 		<div class="col-12 col-md-4 my-auto pb-2">
-			<img src="floor_damage.jpg" style="max-width:100%;" />
+			<img src="floor_damage.jpg" style="width:100%;" />
 		</div>
 	</div>
 	<div class= "row mx-0 mt-3 service-row">
